# gippitybot

./: Cargo.toml  Dockerfile  docker-compose.yml  randomfile.txt  supercool.txt
.github/workflows/: build-push.yml
src/: api.rs  main.rs  server.rs
