[package]
name = "gippitybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chatgpt_rs = "1.2.3"
serenity = {version= "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]  }
tokio = {version = "1.33.0", features = ["full"]}
rand = "0.8.5"
reqwest = {version= "0.11.22", features= ["json", "serde_json"]}
serde = {version="1.0.189", features=["serde_derive"]}
tide = "0.16.0"
